--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,11 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
+		<style>
+			body, a {
+				color: rgba(0,0,0,.9);
+			}
+		</style>
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
