chore: fun colors

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,10 @@
 			body, a {
 				color: rgba(0,0,0,.9);
 			}
+			body {
+				background: linear-gradient(lightsteelblue, rgba(0,0,0,0));
+				min-height: 100vh;
+			}
 		</style>
 	</head>
 	<body>
