--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,20 @@
 			body {
 				background: linear-gradient(lightsteelblue, rgba(0,0,0,0));
 				min-height: 100vh;
+				overflow: hidden;
 			}
+		
+			@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+			
+			select, label, input, body {
+				font-family: 'Architects Daughter', sans-serif !important;
+			}			
+
+			input[type="submit"] {
+				background-color: black !important;
+				color: white;				
+			}
+			
 		</style>
 	</head>
 	<body>
