--- a/src/app.html
+++ b/src/app.html
@@ -5,19 +5,19 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
-		<style>
+		<style lang="scss">
 			body, a {
 				color: rgba(0,0,0,.9);
 			}
 			body {
-				background: linear-gradient(lightsteelblue, rgba(0,0,0,0));
+				background: linear-gradient(white, rgba(0,0,0,0));
 				min-height: 100vh;
 				overflow: hidden;
 			}
 		
 			@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 			
-			select, label, input, body {
+			select, label, input, body, h1, h2, h3, h4, h5, h6 {
 				font-family: 'Architects Daughter', sans-serif !important;
 			}			
 
